==> MorseMicro/mm-iot-sdk/framework/src/platforms/mm-ekh08-h753/mm_shims/mmhal_wlan.c <==
#include "mmhal_wlan.h"
#include "mmosal.h"
#include "mmconfig.h"
#include "mmutils.h"
#include "main.h"
#define BYTE_TRAIN 16
#define DMA_WAIT_TMO (10)
#define DMA_TRANSFER_MIN_LENGTH (16)

bool mmhal_wlan_spi_irq_is_asserted(void)
{
    return !LL_GPIO_IsInputPinSet(SPI_IRQ_GPIO_Port, SPI_IRQ_Pin);
}

void mmhal_wlan_set_spi_irq_enabled(bool enabled)
{
    if (enabled)
    {
        LL_EXTI_EnableIT_0_31(SPI_IRQ_LINE);
        LL_EXTI_EnableEvent_0_31(SPI_IRQ_LINE);

        /* The transiver will hold the IRQ line low if there is additional information
         * to be retrived. Ideally the interrupt pin would be configured as a low level
         * interrupt.
         */
        if (mmhal_wlan_spi_irq_is_asserted())
        {
            if (spi_irq_handler != NULL)
            {
                spi_irq_handler();
            }
        }
        NVIC_EnableIRQ(SPI_IRQn);
    }
    else
    {
        NVIC_DisableIRQ(SPI_IRQn);

        LL_EXTI_DisableIT_0_31(SPI_IRQ_LINE);
        LL_EXTI_DisableEvent_0_31(SPI_IRQ_LINE);
    }
}

void BUSY_IRQ_HANDLER(void)
{
    if (LL_EXTI_IsActiveFlag_0_31(BUSY_IRQ_LINE) != RESET)
    {
        LL_EXTI_ClearFlag_0_31(BUSY_IRQ_LINE);
        if (busy_irq_handler != NULL)
        {
            busy_irq_handler();
        }
    }
}
